Make annotations to lab assignments

--- a/Lab1-babypython.ipynb
+++ b/Lab1-babypython.ipynb
@@ -10,6 +10,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Submitted by Kendrick Lo (Harvard ID: 70984997) for AC 209\n",
+    "\n",
+    "Github username: ppgmg"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -43,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##The Python Language\n",
+    "## The Python Language\n",
     "\n",
     "Lets talk about using Python as a calculator..."
    ]
@@ -141,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can obtain the type of a variable, and use boolean comparisons tontest these types."
+    "We can obtain the type of a variable, and use boolean comparisons to test these types."
    ]
   },
   {
@@ -221,7 +230,7 @@
     "\n",
     "What I mean is, python has a certain way of doing things. For example lets call one of these ways listiness. Listiness works on lists, dictionaries, files, and a general notion of something called an iterator.\n",
     "\n",
-    "But first, lets introduce the notion of a comprehension. Its a way of constructing a list"
+    "But first, lets introduce the notion of a comprehension. Its a way of constructing a list."
    ]
   },
   {
@@ -252,12 +261,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python has some nifty functions like `enumerate` and `zip`. The former gives a list of tuples with each tuple of the form `(index, value)`, while the latter takes elements from each list and outs them together into a tuple, thus creating a list of tuples. The first is a duck, but the second isnt."
+    "Python has some nifty functions like `enumerate` and `zip`. The former gives a list of tuples with each tuple of the form `(index, value)`, while the latter takes elements from each list and outputs them together into a tuple, thus creating a list of tuples. The first is a duck, but the second isnt."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -265,16 +274,62 @@
     {
      "data": {
       "text/plain": [
-       "(<enumerate at 0x108fb0410>, [(1, 1), (2, 4), (3, 9), (4, 16), (5, 25)])"
+       "[(1, 1), (2, 4), (3, 9), (4, 16), (5, 25)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "enumerate(asquaredlist),zip(alist, asquaredlist)"
+    "zip(alist, asquaredlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<enumerate at 0x108e2cb40>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enumerate(asquaredlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, value in enumerate(asquaredlist):\n",
+    "    print value"
    ]
   },
   {
@@ -286,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -294,22 +349,23 @@
     {
      "data": {
       "text/plain": [
-       "<itertools.izip at 0x108fafb48>"
+       "<itertools.izip at 0x108efa8c0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from itertools import izip\n",
-    "izip(alist, asquaredlist)"
+    "temp = izip(alist, asquaredlist)\n",
+    "temp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -318,7 +374,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<enumerate object at 0x108fb05f0>\n"
+      "<enumerate object at 0x108e2cc80>\n"
      ]
     }
    ],
@@ -328,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -339,7 +395,7 @@
        "[(0, 1), (1, 4), (2, 9), (3, 16), (4, 25)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -417,7 +473,7 @@
        "31659"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,12 +526,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###The indexing of lists"
+    "### The indexing of lists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -547,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -606,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -642,19 +698,19 @@
     }
    ],
    "source": [
-    "hamlettokens[1:8:2]#get every 2nd world between the 2nd and the 9th: ie 2nd, 4th, 6th, and 8th"
+    "hamlettokens[1:8:2]#get every 2nd word between the 2nd and the 9th: ie 2nd, 4th, 6th, and 8th"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "range and xrange get the list of integers upto N. But xrange behaves like an iterator. The reason for this is that there is no point generaing all os a million integers. We can just add 1 to the previous one and save memory. So we trade off storage for computation."
+    "range and xrange get the list of integers upto N. But xrange behaves like an iterator. The reason for this is that there is no point generaing all of a million integers. We can just add 1 to the previous one and save memory. So we trade off storage for computation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -665,7 +721,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +739,7 @@
    "source": [
     "## Dictionaries\n",
     "\n",
-    "These are the bread and butter. You will use them a lot. They even duck like lists. But be careful how."
+    "These are the bread and butter. You will use them a lot. They even duck like lists. But be careful how. **[KL: no inherent order in a dictionary, I think]**"
    ]
   },
   {
@@ -769,7 +825,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###and conversion to json"
+    "### and conversion to json"
    ]
   },
   {
@@ -1068,27 +1124,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0,\n",
+       " 1: 1,\n",
+       " 2: 8,\n",
+       " 3: 27,\n",
+       " 4: 64,\n",
+       " 5: 125,\n",
+       " 6: 216,\n",
+       " 7: 343,\n",
+       " 8: 512,\n",
+       " 9: 729,\n",
+       " 10: 1000}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "ints = range(11)\n",
+    "cubes = (j**3 for j in ints)\n",
+    "\n",
+    "mydict2 ={k:v for (k,v) in zip(ints,cubes)}\n",
+    "mydict2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Booleans and Control-flow\n",
+    "## Booleans and Control-flow\n",
     "\n",
     "Lets test for belonging..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -1099,7 +1181,7 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -1122,7 +1204,7 @@
        "False"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -1166,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -1185,13 +1267,13 @@
        "(None, None)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "do_it(2), do_it(3)"
+    "do_it(2), do_it(3) # print, if that's what you want to do"
    ]
   },
   {
@@ -1203,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -1238,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -1334,7 +1416,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We then find a unique set of words using python's `set` data structure. We count how often those words occured usinf the `count` method on lists."
+    "We then find a unique set of words using python's `set` data structure. We count how often those words occured using the `count` method on lists."
    ]
   },
   {
