--- a/Lab1-git.ipynb
+++ b/Lab1-git.ipynb
@@ -11,6 +11,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Submitted by Kendrick Lo (Harvard ID: 70984997) for AC 209\n",
+    "\n",
+    "Github username: ppgmg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\r\n",
+      "Your branch is up-to-date with 'origin/master'.\r\n",
+      "Changes not staged for commit:\r\n",
+      "  (use \"git add <file>...\" to update what will be committed)\r\n",
+      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\r\n",
+      "\r\n",
+      "\t\u001b[31mmodified:   Lab1-git.ipynb\u001b[m\r\n",
+      "\t\u001b[31mmodified:   Lab1-pythonpandas.ipynb\u001b[m\r\n",
+      "\r\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**This tutorial is largely based on the repository**:\n",
     "\n",
     "git@github.com:rdadolf/git-and-github.git\n",
@@ -30,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Table of Contents\n",
+    "# Table of Contents\n",
     "* [Lab 1: Version Control with Git](#Lab-1:-Version-Control-with-Git)\n",
     "\t* [Why should you use version control?](#Why-should-you-use-version-control?)\n",
     "\t* [Git Basics](#Git-Basics)\n",
@@ -259,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Poking around"
+    "### Poking around"
    ]
   },
   {
@@ -721,7 +758,8 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -753,7 +791,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Remotes and `fetch`ing from them"
+    "### Remotes and `fetch`ing from them"
    ]
   },
   {
@@ -1044,7 +1082,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Branching."
+    "### Branching"
    ]
   },
   {
@@ -1529,7 +1567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Recovering from a mistake"
+    "### Recovering from a mistake"
    ]
   },
   {
@@ -1651,7 +1689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Changing only one file"
+    "### Changing only one file"
    ]
   },
   {
@@ -1882,7 +1920,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##The Homework git flow"
+    "## The Homework git flow"
    ]
   },
   {
@@ -1929,7 +1967,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##The Lab git flow"
+    "## The Lab git flow"
    ]
   },
   {
@@ -1970,15 +2008,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1997,7 +2026,7 @@
     " \n",
     " - The description field is just a short text field that will accompany your repository's name on the github website.\n",
     "\n",
-    " - If you're creating a new repository, check the \"Initialize this repository with a README\" box. This is a little bit of a misnomer. If you don't do this, you won't be able to clone your repository at all. Instead, you'll have to manually create a new repository on your computer and upload that to github. Suffice to say, unless you've got an existing git repository that was hosted somewhere besides github, *always check this box*.\n",
+    " - If you're creating a new repository, check the \"Initialize this repository with a README\" box. This is a little bit of a misnomer. **If you don't do this, you won't be able to clone your repository at all.** Instead, you'll have to manually create a new repository on your computer and upload that to github. Suffice to say, unless you've got an existing git repository that was hosted somewhere besides github, *always check this box*.\n",
     "\n",
     " - You're free to click the `.gitignore` or `license` buttons, too, but there's no requirement to do so. You can easily create either later. For our class I use a python `.gitignore` from the dropdown menu"
    ]
@@ -2056,7 +2085,7 @@
     "\n",
     "<img src='github_branch.png' style=\"width:350px; display:inline-block;\">\n",
     "\n",
-    "Alternately, if you've already clone your repository somewhere, you can do it on the command line:"
+    "Alternately, if you've already cloned your repository somewhere, you can do it on the command line:"
    ]
   },
   {
